--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,28 @@ services:
       - "5173:5173"
     stdin_open: true
     tty: true
+  agenda-backend:
+    image: node:lts
+    container_name: agenda-backend
+    working_dir: /app
+    volumes:
+      - ./backend:/app
+    ports:
+      - "3011:3000"
+    stdin_open: true
+    tty: true    
+  server-db-mysql:
+    image: mysql:8.0
+    container_name: server-db-mysql
+    restart: always
+    environment:
+      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DATABASE=agenda
+      - MYSQL_USER=user
+      - MYSQL_PASSWORD=root
+    ports:
+      - "3306:3306"
+    volumes:
+      - ./mysql_data:/var/lib/mysql
+  # volumes:
+  #    mysql_data:
